fix header styles

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,7 +22,7 @@ header {
     align-items: center;
 
     &-left {
-        width: 160px;
+        width: auto;
 
         span:nth-child(1) {
             margin-right: 56px;
