--- a/css/styles.css
+++ b/css/styles.css
@@ -119,10 +119,18 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 3px 6px #0000000F;
           box-shadow: 0px 3px 6px #0000000F;
   position: relative;
+}
+
+nav img {
+  width: 80px;
+  height: 60px;
 }
 
 nav::after {
