--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -59,9 +59,15 @@ nav {
     height: 96px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: $white;
     box-shadow: 0px 3px 6px $shadow-nav;
     position: relative;
+
+    img {
+        width: 80px;
+        height: 60px;
+    }
 
     &::after {
         content: "";
