--- a/scss/_cardsContainer.scss
+++ b/scss/_cardsContainer.scss
@@ -293,3 +293,44 @@
         }
     }
 }
+
+@media ( max-width: $breakpoint-mobile) {
+
+    .card .arrow {
+
+        &-left {
+            left: 12px;
+        }
+
+        &-right {
+            position: absolute;
+            right: 12px;
+        }
+    }
+
+    .c {
+        .c3 {
+            .text {
+                left: 35%;
+                max-width: 100px;
+            }
+            a { 
+                left: 35%;
+                top: 80%
+            }   
+        }
+    }
+
+    .d, .f, .g {
+        span {
+            font-size: 2.2rem;
+        }
+        p {
+            font-size: 1.3rem;
+        }
+    }
+
+    .f span {
+        margin-bottom: 18px;
+    }
+}
