--- a/css/styles.css
+++ b/css/styles.css
@@ -593,12 +593,15 @@ main {
     position: absolute;
     right: 12px;
   }
+  .c .c2 span {
+    font-size: 1.7rem;
+  }
   .c .c3 .text {
-    left: 35%;
-    max-width: 100px;
+    left: 33%;
+    max-width: 120px;
   }
   .c .c3 a {
-    left: 35%;
+    left: 33%;
     top: 80%;
   }
   .d span, .f span, .g span {
