--- a/scss/_cardsContainer.scss
+++ b/scss/_cardsContainer.scss
@@ -309,13 +309,20 @@
     }
 
     .c {
+
+        .c2 {
+            span {
+                font-size: 1.7rem;
+                // left: 18px
+            }
+        }
         .c3 {
             .text {
-                left: 35%;
-                max-width: 100px;
+                left: 33%;
+                max-width: 120px;
             }
             a { 
-                left: 35%;
+                left: 33%;
                 top: 80%
             }   
         }
