--- a/scss/_cardsContainer.scss
+++ b/scss/_cardsContainer.scss
@@ -313,12 +313,13 @@
         .c2 {
             span {
                 font-size: 1.7rem;
-                // left: 18px
             }
         }
         .c3 {
             .text {
                 left: 33%;
+                top: 48%;
+                font-size: 1.1rem;
                 max-width: 120px;
             }
             a { 
